CI: Fixup path for solana install

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,9 @@ jobs:
       run: ./install-rust-build-deps.sh
 
     - name: Install Solana
-      run: ./install-solana.sh
+      run: |
+        ./install-solana.sh
+        echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
 
     - name: Build and test program
       run: cd ${{ matrix.program }} && cargo test-sbf
