--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,3 +70,35 @@ jobs:
 
     - name: Build and test program
       run: cd ${{ matrix.program }} && cargo test-sbf
+
+  c-test:
+    name: Run tests against C implementations
+    strategy:
+      matrix:
+        program: [helloworld]
+      fail-fast: false
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cargo/registry
+          ~/.cargo/git
+        key: rust-${{ hashFiles('./Cargo.lock') }}
+
+    - name: Install Rust
+      uses: dtolnay/rust-toolchain@master
+      with:
+        toolchain: 1.78.0
+
+    - name: Install Rust build deps
+      run: ./install-rust-build-deps.sh
+
+    - name: Install Solana
+      run: |
+        ./install-solana.sh
+        echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
+
+    - name: Build and test program
+      run: ./test-c.sh ${{ matrix.program }}
