cpi: Add rust program that CPIs into system program
#### Problem

There's no example that performs a cross-program invocation to see
compute units used.

#### Summary of changes

Add a simple rust example and test.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
     name: Run tests against Rust implementations
     strategy:
       matrix:
-        program: [helloworld, transfer-lamports]
+        program: [helloworld, transfer-lamports, cpi]
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
