add forgotten cpi program to CI step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     name: Run tests against Zig implementations
     strategy:
       matrix:
-        program: [helloworld, transfer-lamports]
+        program: [helloworld, transfer-lamports, cpi]
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
