--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,12 @@
 name: Build and test programs
 
-on: [pull_request, push]
+on:
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 env:
   SOLANA_ZIG_VERSION: v1.43.0
