--- a/cpi/pinocchio/Cargo.toml
+++ b/cpi/pinocchio/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 test-sbf = []
 
 [dependencies]
-pinocchio = { version = "0.5", git = "https://github.com/febo/pinocchio.git", branch = "create-pda-unchecked" }
-pinocchio-system = { version="0.1",  git = "https://github.com/febo/pinocchio.git", branch = "create-pda-unchecked" }
+pinocchio = "0.6"
+pinocchio-system = "0.2"
 
 [dev-dependencies]
 solana-program-test = "2.0.3"
