rust: Bump Solana crates to v2.1
#### Problem

Version 2.1 of the Solana crates is out, but all of the Rust programs
are still on v2.0.

#### Summary of changes

Bump crates to v2.1, Rust to 1.81, and use component crates wherever
possible. The CPI program has a higher CU usage also, so update the
README to reflect that.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,9 @@ members = [
 ]
 resolver = "2"
 
+[workspace.lints.rust.unexpected_cfgs]
+level = "warn"
+check-cfg = [
+    'cfg(target_os, values("solana"))',
+    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
+]
