--- a/cpi/Cargo.toml
+++ b/cpi/Cargo.toml
@@ -7,11 +7,19 @@ edition = "2021"
 test-sbf = []
 
 [dependencies]
-solana-program = "2.0.3"
+solana-account-info = "2.1.0"
+solana-cpi = "2.1.0"
+solana-program = "2.1.0"
+solana-program-entrypoint = "2.1.0"
+solana-program-error = "2.1.0"
+solana-pubkey = "2.1.0"
 
 [dev-dependencies]
-solana-program-test = "2.0.3"
-solana-sdk = "2.0.3"
+solana-program-test = "2.1.0"
+solana-sdk = "2.1.0"
 
 [lib]
 crate-type = ["cdylib", "lib"]
+
+[lints]
+workspace = true
