--- a/helloworld/Cargo.toml
+++ b/helloworld/Cargo.toml
@@ -4,11 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-solana-program = "2"
+solana-msg = "2.1"
+solana-program-entrypoint = "2.1"
 
 [dev-dependencies]
-solana-program-test = "2"
-solana-sdk = "2"
+solana-instruction = "2.1"
+solana-program-test = "2.1"
+solana-pubkey = "2.1"
+solana-sdk = "2.1"
 
 [lib]
 crate-type = ["cdylib", "lib"]
+
+[lints]
+workspace = true
