--- a/transfer-lamports/Cargo.toml
+++ b/transfer-lamports/Cargo.toml
@@ -4,15 +4,21 @@ version = "1.0.0"
 edition = "2021"
 
 [features]
-no-entrypoint = []
 test-sbf = []
 
 [dependencies]
-solana-program = "2.0.3"
+solana-account-info = "2.1.0"
+solana-program-entrypoint = "2.1.0"
+solana-program-error = "2.1.0"
+solana-pubkey = "2.1.0"
 
 [dev-dependencies]
-solana-program-test = "2.0.3"
-solana-sdk = "2.0.3"
+solana-instruction = "2.1.0"
+solana-program-test = "2.1.0"
+solana-sdk = "2.1.0"
 
 [lib]
 crate-type = ["cdylib", "lib"]
+
+[lints]
+workspace = true
