token: Add section for SPL Token program
#### Problem

The SPL Token program is one of the most called on mainnet-beta, but it
contains many inefficiencies, including its entrypoint and serde model.
It's also a great base for optimizations.

#### Summary of changes

Add SPL Token along with the `assert_instruction_count` tests for
initialize mint, initialize account, mint to, transfer, burn, and close
account.

From here, we can optimize all we want!

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
     name: Run tests against Rust implementations
     strategy:
       matrix:
-        program: [helloworld, transfer-lamports, cpi]
+        program: [helloworld, transfer-lamports, cpi, token]
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
