pubkey: Add a simple program comparing two pubkeys
#### Problem

It can be expensive to compare two pubkeys in an on-chain program, but
it hasn't been quantified.

#### Summary of changes

Add a Rust and Zig program to do that

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     name: Run tests against Zig implementations
     strategy:
       matrix:
-        program: [helloworld, transfer-lamports, cpi, token]
+        program: [helloworld, transfer-lamports, cpi, pubkey, token]
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
@@ -53,7 +53,7 @@ jobs:
     name: Run tests against Rust implementations
     strategy:
       matrix:
-        program: [helloworld, transfer-lamports, cpi, token]
+        program: [helloworld, transfer-lamports, cpi, pubkey, token]
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
